@@ -70,12 +70,17 @@ for tier, roboport in pairs(roboports) do
         recharging_light = { intensity = 0.2, size = 3, color = { r = 0.5, g = 0.5, b = 1.0 } },
         stationing_offset = { 0, -0.6 },
         charging_station_shift = { 0, 0.5 },
-        charging_station_count = roboport.charging_station_count * 2,
         charging_station_count_affected_by_quality  = true,
         charging_distance = 1.6,
         charging_threshold_distance = 5,
         categories = {"armor"}
     }
+
+    if mods["quality"]then
+        charging_station_count = roboport.charging_station_count * 3
+    elseif not mods["quality"]then
+        charging_station_count = roboport.charging_station_count
+    end
 
     data:extend({
         item,
